--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Hello wörld!
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Hello World</title>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+    <!-- Don't use this in production (only because it is slow?): -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <style>
+    #root {
+        display: flex;
+        justify-content: center;
+    }
+  </style>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="text/babel" src="index.js"> </script>
+  </body>
+</html>
