--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <style>
     #root {
         display: flex;
+        flex-direction: column;
+        align-items: center;
         justify-content: center;
     }
   </style>
