--- a/kemia/alkuaineet.html
+++ b/kemia/alkuaineet.html
@@ -34,6 +34,7 @@ for (let k of Object.keys(es)) {
     d.appendChild(p);
 });
   d.appendChild(b);
+  r.appendChild(d);
 }
     }</script>
   </body>
