--- a/kemia/alkuaineet.html
+++ b/kemia/alkuaineet.html
@@ -33,6 +33,7 @@
     .item div {
       font-size: 1.2rem;
       margin: 0;
+      margin-left: 1%;
     }
 
     /* Media query for screens smaller than 768px (mobile screens) */
@@ -134,6 +135,7 @@ U: "uraani",
 let ps = new URLSearchParams(window.location.search);
 if (ps.get("swap") == "1") {
   es = Object.fromEntries(Object.entries(es).map(t=>t.reverse()));
+  document.querySelector("a").href = "?swap=0";
 }
 
 let src = Array.from(Object.keys(es));
