--- a/kemia/alkuaineet.html
+++ b/kemia/alkuaineet.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      font-family: Arial, sans-serif;
+      font-family: 'Courier New', monospace;
     }
 
     .container {
