--- a/kemia/alkuaineet.html
+++ b/kemia/alkuaineet.html
@@ -10,6 +10,9 @@
       padding: 0;
       font-family: 'Courier New', monospace;
     }
+    button {
+      font-family: 'Courier New', monospace;
+    }
 
     .container {
       display: flex;
