TA: Remove some unneeded keys and default to typing cyrillic characters

--- a/kielet/index.html
+++ b/kielet/index.html
@@ -42,6 +42,7 @@
 
             /* Backspace. */
             #keyboardArea > div:nth-child(1) > button:last-child {
+                margin-left: 130px;
                 width: 120px;
             }
 
@@ -65,8 +66,13 @@
                 width: 80px;
             }
 
+            /* Key right of less than -key. */
+            #keyboardArea > div:nth-child(4) > button:nth-child(2) {
+                margin-left: 65px;
+            }
+
             /* Right shift. */
-            #keyboardArea > div:nth-child(4) > button:nth-child(13) {
+            #keyboardArea > div:nth-child(4) > button:nth-child(12) {
                 width: 100px;
             }
 
@@ -78,7 +84,12 @@
 
             /* Left-arrow. */
             #keyboardArea > div:nth-child(5) > button:nth-child(2) {
-                margin-left: 190px;
+                margin-left: 125px;
+            }
+
+            /* Right-arrow. */
+            #keyboardArea > div:nth-child(5) > button:nth-child(3) {
+                margin-left: 65px;
             }
 
             .button-active {
@@ -98,7 +109,7 @@
             </div>
             <div id="keyboardArea">
                 <div>
-                    <button id="§">§</button>
+                    <button id="§">ё</button>
                     <button id="1">1</button>
                     <button id="2">2</button>
                     <button id="3">3</button>
@@ -109,53 +120,50 @@
                     <button id="8">8</button>
                     <button id="9">9</button>
                     <button id="0">0</button>
-                    <button id="+">+</button>
-                    <button id="´">´</button>
                     <button id="backspace">⌫</button>
                 </div>
                 <div>
                     <button id="tab">↹</button>
-                    <button id="q">q</button>
-                    <button id="w">w</button>
-                    <button id="e">e</button>
-                    <button id="r">r</button>
-                    <button id="t">t</button>
-                    <button id="y">y</button>
-                    <button id="u">u</button>
-                    <button id="i">i</button>
-                    <button id="o">o</button>
-                    <button id="p">p</button>
-                    <button id="å">å</button>
-                    <button id="¨">¨</button>
+                    <button id="q">й</button>
+                    <button id="w">ц</button>
+                    <button id="e">у</button>
+                    <button id="r">к</button>
+                    <button id="t">е</button>
+                    <button id="y">н</button>
+                    <button id="u">г</button>
+                    <button id="i">ш</button>
+                    <button id="o">щ</button>
+                    <button id="p">з</button>
+                    <button id="å">х</button>
+                    <button id="¨">ъ</button>
                     <button id="enter">↵</button>
                 </div>
                 <div>
                     <button id="capslock">caps</button>
-                    <button id="a">a</button>
-                    <button id="s">s</button>
-                    <button id="d">d</button>
-                    <button id="f">f</button>
-                    <button id="g">g</button>
-                    <button id="h">h</button>
-                    <button id="j">j</button>
-                    <button id="k">k</button>
-                    <button id="l">l</button>
-                    <button id="ö">ö</button>
-                    <button id="ä">ä</button>
+                    <button id="a">ф</button>
+                    <button id="s">ы</button>
+                    <button id="d">в</button>
+                    <button id="f">а</button>
+                    <button id="g">п</button>
+                    <button id="h">р</button>
+                    <button id="j">о</button>
+                    <button id="k">л</button>
+                    <button id="l">д</button>
+                    <button id="ö">ж</button>
+                    <button id="ä">э</button>
                     <button id="'">'</button>
                 </div>
                 <div>
                     <button id="shiftleft">⇧</button>
-                    <button id="<">&lt;</button>
-                    <button id="z">z</button>
-                    <button id="x">x</button>
-                    <button id="c">c</button>
-                    <button id="v">v</button>
-                    <button id="b">b</button>
-                    <button id="n">n</button>
-                    <button id="m">m</button>
-                    <button id=",">,</button>
-                    <button id=".">.</button>
+                    <button id="z">я</button>
+                    <button id="x">ч</button>
+                    <button id="c">с</button>
+                    <button id="v">м</button>
+                    <button id="b">и</button>
+                    <button id="n">т</button>
+                    <button id="m">ь</button>
+                    <button id=",">б</button>
+                    <button id=".">ю</button>
                     <button id="-">-</button>
                     <button id="shiftright">⇧</button>
                 </div>
