TA: Add both langs' characters to the keys

--- a/kielet/index.html
+++ b/kielet/index.html
@@ -32,6 +32,20 @@
                 gap: 5px;
             }
 
+            /* Styling both languages' characters on the keys. */
+            #keyboardArea button > div:first-child {
+                font-size: 90%;
+                padding-top: 10%;
+                padding-right: 40%;
+            }
+
+            #keyboardArea button > div:nth-child(2) {
+                font-weight: bold;
+                color: red;
+                padding-bottom: 10%;
+                padding-left: 40%;
+            }
+
             button {
                 width: 60px;
                 height: 60px;
@@ -116,7 +130,7 @@
             </div>
             <div id="keyboardArea">
                 <div>
-                    <button id="§">ё</button>
+                    <button id="§"><div>§</div><div>ё</div></button>
                     <button id="1">1</button>
                     <button id="2">2</button>
                     <button id="3">3</button>
@@ -131,46 +145,46 @@
                 </div>
                 <div>
                     <button id="tab">↹</button>
-                    <button id="q">й</button>
-                    <button id="w">ц</button>
-                    <button id="e">у</button>
-                    <button id="r">к</button>
-                    <button id="t">е</button>
-                    <button id="y">н</button>
-                    <button id="u">г</button>
-                    <button id="i">ш</button>
-                    <button id="o">щ</button>
-                    <button id="p">з</button>
-                    <button id="å">х</button>
-                    <button id="¨">ъ</button>
+                    <button id="q"><div>q</div><div>й</div></button>
+                    <button id="w"><div>w</div><div>ц</div></button>
+                    <button id="e"><div>e</div><div>у</div></button>
+                    <button id="r"><div>r</div><div>к</div></button>
+                    <button id="t"><div>t</div><div>е</div></button>
+                    <button id="y"><div>y</div><div>н</div></button>
+                    <button id="u"><div>u</div><div>г</div></button>
+                    <button id="i"><div>i</div><div>ш</div></button>
+                    <button id="o"><div>o</div><div>щ</div></button>
+                    <button id="p"><div>p</div><div>з</div></button>
+                    <button id="å"><div>å</div><div>х</div></button>
+                    <button id="¨"><div>"</div><div>ъ</div></button>
                     <button id="enter">↵</button>
                 </div>
                 <div>
                     <button id="capslock">caps</button>
-                    <button id="a">ф</button>
-                    <button id="s">ы</button>
-                    <button id="d">в</button>
-                    <button id="f">а</button>
-                    <button id="g">п</button>
-                    <button id="h">р</button>
-                    <button id="j">о</button>
-                    <button id="k">л</button>
-                    <button id="l">д</button>
-                    <button id="ö">ж</button>
-                    <button id="ä">э</button>
+                    <button id="a"><div>a</div><div>ф</div></button>
+                    <button id="s"><div>s</div><div>ы</div></button>
+                    <button id="d"><div>d</div><div>в</div></button>
+                    <button id="f"><div>f</div><div>а</div></button>
+                    <button id="g"><div>g</div><div>п</div></button>
+                    <button id="h"><div>h</div><div>р</div></button>
+                    <button id="j"><div>j</div><div>о</div></button>
+                    <button id="k"><div>k</div><div>л</div></button>
+                    <button id="l"><div>l</div><div>д</div></button>
+                    <button id="ö"><div>ö</div><div>ж</div></button>
+                    <button id="э"><div>ä</div><div>э</div></button>
                     <button id="'">'</button>
                 </div>
                 <div>
                     <button id="shiftleft">⇧</button>
-                    <button id="z">я</button>
-                    <button id="x">ч</button>
-                    <button id="c">с</button>
-                    <button id="v">м</button>
-                    <button id="b">и</button>
-                    <button id="n">т</button>
-                    <button id="m">ь</button>
-                    <button id=",">б</button>
-                    <button id=".">ю</button>
+                    <button id="z"><div>z</div><div>я</div></button>
+                    <button id="x"><div>x</div><div>ч</div></button>
+                    <button id="c"><div>c</div><div>с</div></button>
+                    <button id="v"><div>v</div><div>м</div></button>
+                    <button id="b"><div>b</div><div>и</div></button>
+                    <button id="n"><div>n</div><div>т</div></button>
+                    <button id="m"><div>m</div><div>ь</div></button>
+                    <button id=","><div>,</div><div>б</div></button>
+                    <button id="."><div>.</div><div>ю</div></button>
                     <button id="-">-</button>
                     <button id="shiftright">⇧</button>
                 </div>
