--- a/kielet/index.html
+++ b/kielet/index.html
@@ -125,12 +125,12 @@
             <div id="inputArea">
                 <p id="wordText"></p>
                 <p id="instructionText">По-русски:</p>
-                <input type="text"/>
+                <input id="answerInput" type="text"/>
                 <p id="pointsText"></p>
             </div>
             <div id="keyboardArea">
                 <div>
-                    <button id="§"><div>§</div><div>ё</div></button>
+                    <button id="Backquote"><div>§</div><div>ё</div></button>
                     <button id="1">1</button>
                     <button id="2">2</button>
                     <button id="3">3</button>
@@ -145,51 +145,51 @@
                 </div>
                 <div>
                     <button id="tab">↹</button>
-                    <button id="q"><div>q</div><div>й</div></button>
-                    <button id="w"><div>w</div><div>ц</div></button>
-                    <button id="e"><div>e</div><div>у</div></button>
-                    <button id="r"><div>r</div><div>к</div></button>
-                    <button id="t"><div>t</div><div>е</div></button>
-                    <button id="y"><div>y</div><div>н</div></button>
-                    <button id="u"><div>u</div><div>г</div></button>
-                    <button id="i"><div>i</div><div>ш</div></button>
-                    <button id="o"><div>o</div><div>щ</div></button>
-                    <button id="p"><div>p</div><div>з</div></button>
-                    <button id="å"><div>å</div><div>х</div></button>
-                    <button id="¨"><div>"</div><div>ъ</div></button>
+                    <button id="KeyQ"><div>q</div><div>й</div></button>
+                    <button id="KeyW"><div>w</div><div>ц</div></button>
+                    <button id="KeyE"><div>e</div><div>у</div></button>
+                    <button id="KeyR"><div>r</div><div>к</div></button>
+                    <button id="KeyT"><div>t</div><div>е</div></button>
+                    <button id="KeyY"><div>y</div><div>н</div></button>
+                    <button id="KeyU"><div>u</div><div>г</div></button>
+                    <button id="KeyI"><div>i</div><div>ш</div></button>
+                    <button id="KeyO"><div>o</div><div>щ</div></button>
+                    <button id="KeyP"><div>p</div><div>з</div></button>
+                    <button id="BracketLeft"><div>å</div><div>х</div></button>
+                    <button id="BracketRight"><div>"</div><div>ъ</div></button>
                     <button id="enter">↵</button>
                 </div>
                 <div>
                     <button id="capslock">caps</button>
-                    <button id="a"><div>a</div><div>ф</div></button>
-                    <button id="s"><div>s</div><div>ы</div></button>
-                    <button id="d"><div>d</div><div>в</div></button>
-                    <button id="f"><div>f</div><div>а</div></button>
-                    <button id="g"><div>g</div><div>п</div></button>
-                    <button id="h"><div>h</div><div>р</div></button>
-                    <button id="j"><div>j</div><div>о</div></button>
-                    <button id="k"><div>k</div><div>л</div></button>
-                    <button id="l"><div>l</div><div>д</div></button>
-                    <button id="ö"><div>ö</div><div>ж</div></button>
-                    <button id="э"><div>ä</div><div>э</div></button>
+                    <button id="KeyA"><div>a</div><div>ф</div></button>
+                    <button id="KeyS"><div>s</div><div>ы</div></button>
+                    <button id="KeyD"><div>d</div><div>в</div></button>
+                    <button id="KeyF"><div>f</div><div>а</div></button>
+                    <button id="KeyG"><div>g</div><div>п</div></button>
+                    <button id="KeyH"><div>h</div><div>р</div></button>
+                    <button id="KeyJ"><div>j</div><div>о</div></button>
+                    <button id="KeyK"><div>k</div><div>л</div></button>
+                    <button id="KeyL"><div>l</div><div>д</div></button>
+                    <button id="Semicolon"><div>ö</div><div>ж</div></button>
+                    <button id="Quote"><div>ä</div><div>э</div></button>
                     <button id="'">'</button>
                 </div>
                 <div>
-                    <button id="shiftleft">⇧</button>
-                    <button id="z"><div>z</div><div>я</div></button>
-                    <button id="x"><div>x</div><div>ч</div></button>
-                    <button id="c"><div>c</div><div>с</div></button>
-                    <button id="v"><div>v</div><div>м</div></button>
-                    <button id="b"><div>b</div><div>и</div></button>
-                    <button id="n"><div>n</div><div>т</div></button>
-                    <button id="m"><div>m</div><div>ь</div></button>
-                    <button id=","><div>,</div><div>б</div></button>
-                    <button id="."><div>.</div><div>ю</div></button>
+                    <button id="ShiftLeft">⇧</button>
+                    <button id="KeyZ"><div>z</div><div>я</div></button>
+                    <button id="KeyX"><div>x</div><div>ч</div></button>
+                    <button id="KeyC"><div>c</div><div>с</div></button>
+                    <button id="KeyV"><div>v</div><div>м</div></button>
+                    <button id="KeyB"><div>b</div><div>и</div></button>
+                    <button id="KeyN"><div>n</div><div>т</div></button>
+                    <button id="KeyM"><div>m</div><div>ь</div></button>
+                    <button id="Comma"><div>,</div><div>б</div></button>
+                    <button id="Period"><div>.</div><div>ю</div></button>
                     <button id="-">-</button>
-                    <button id="shiftright">⇧</button>
+                    <button id="ShiftRight">⇧</button>
                 </div>
                 <div>
-                    <button id=" ">space</button>
+                    <button id="Space">space</button>
                     <button id="arrowleft">←</button>
                     <button id="arrowright">→</button>
                 </div>
