TA: Fix checking answer; Change styling

--- a/kielet/index.html
+++ b/kielet/index.html
@@ -34,14 +34,14 @@
 
             /* Styling both languages' characters on the keys. */
             #keyboardArea button > div:first-child {
-                font-size: 90%;
+                font-size: 110%;
                 padding-top: 10%;
                 padding-right: 40%;
             }
 
             #keyboardArea button > div:nth-child(2) {
-                font-weight: bold;
-                color: red;
+                font-size: 90%;
+                color: gray;
                 padding-bottom: 10%;
                 padding-left: 40%;
             }
