TA: Reformat HTML

--- a/kielet/index.html
+++ b/kielet/index.html
@@ -130,7 +130,10 @@
             </div>
             <div id="keyboardArea">
                 <div>
-                    <button id="Backquote"><div>§</div><div>ё</div></button>
+                    <button id="Backquote">
+                        <div>§</div>
+                        <div>ё</div>
+                    </button>
                     <button id="1">1</button>
                     <button id="2">2</button>
                     <button id="3">3</button>
@@ -145,46 +148,142 @@
                 </div>
                 <div>
                     <button id="tab">↹</button>
-                    <button id="KeyQ"><div>q</div><div>й</div></button>
-                    <button id="KeyW"><div>w</div><div>ц</div></button>
-                    <button id="KeyE"><div>e</div><div>у</div></button>
-                    <button id="KeyR"><div>r</div><div>к</div></button>
-                    <button id="KeyT"><div>t</div><div>е</div></button>
-                    <button id="KeyY"><div>y</div><div>н</div></button>
-                    <button id="KeyU"><div>u</div><div>г</div></button>
-                    <button id="KeyI"><div>i</div><div>ш</div></button>
-                    <button id="KeyO"><div>o</div><div>щ</div></button>
-                    <button id="KeyP"><div>p</div><div>з</div></button>
-                    <button id="BracketLeft"><div>å</div><div>х</div></button>
-                    <button id="BracketRight"><div>"</div><div>ъ</div></button>
+                    <button id="KeyQ">
+                        <div>q</div>
+                        <div>й</div>
+                    </button>
+                    <button id="KeyW">
+                        <div>w</div>
+                        <div>ц</div>
+                    </button>
+                    <button id="KeyE">
+                        <div>e</div>
+                        <div>у</div>
+                    </button>
+                    <button id="KeyR">
+                        <div>r</div>
+                        <div>к</div>
+                    </button>
+                    <button id="KeyT">
+                        <div>t</div>
+                        <div>е</div>
+                    </button>
+                    <button id="KeyY">
+                        <div>y</div>
+                        <div>н</div>
+                    </button>
+                    <button id="KeyU">
+                        <div>u</div>
+                        <div>г</div>
+                    </button>
+                    <button id="KeyI">
+                        <div>i</div>
+                        <div>ш</div>
+                    </button>
+                    <button id="KeyO">
+                        <div>o</div>
+                        <div>щ</div>
+                    </button>
+                    <button id="KeyP">
+                        <div>p</div>
+                        <div>з</div>
+                    </button>
+                    <button id="BracketLeft">
+                        <div>å</div>
+                        <div>х</div>
+                    </button>
+                    <button id="BracketRight">
+                        <div>"</div>
+                        <div>ъ</div>
+                    </button>
                     <button id="enter">↵</button>
                 </div>
                 <div>
                     <button id="capslock">caps</button>
-                    <button id="KeyA"><div>a</div><div>ф</div></button>
-                    <button id="KeyS"><div>s</div><div>ы</div></button>
-                    <button id="KeyD"><div>d</div><div>в</div></button>
-                    <button id="KeyF"><div>f</div><div>а</div></button>
-                    <button id="KeyG"><div>g</div><div>п</div></button>
-                    <button id="KeyH"><div>h</div><div>р</div></button>
-                    <button id="KeyJ"><div>j</div><div>о</div></button>
-                    <button id="KeyK"><div>k</div><div>л</div></button>
-                    <button id="KeyL"><div>l</div><div>д</div></button>
-                    <button id="Semicolon"><div>ö</div><div>ж</div></button>
-                    <button id="Quote"><div>ä</div><div>э</div></button>
+                    <button id="KeyA">
+                        <div>a</div>
+                        <div>ф</div>
+                    </button>
+                    <button id="KeyS">
+                        <div>s</div>
+                        <div>ы</div>
+                    </button>
+                    <button id="KeyD">
+                        <div>d</div>
+                        <div>в</div>
+                    </button>
+                    <button id="KeyF">
+                        <div>f</div>
+                        <div>а</div>
+                    </button>
+                    <button id="KeyG">
+                        <div>g</div>
+                        <div>п</div>
+                    </button>
+                    <button id="KeyH">
+                        <div>h</div>
+                        <div>р</div>
+                    </button>
+                    <button id="KeyJ">
+                        <div>j</div>
+                        <div>о</div>
+                    </button>
+                    <button id="KeyK">
+                        <div>k</div>
+                        <div>л</div>
+                    </button>
+                    <button id="KeyL">
+                        <div>l</div>
+                        <div>д</div>
+                    </button>
+                    <button id="Semicolon">
+                        <div>ö</div>
+                        <div>ж</div>
+                    </button>
+                    <button id="Quote">
+                        <div>ä</div>
+                        <div>э</div>
+                    </button>
                     <button id="'">'</button>
                 </div>
                 <div>
                     <button id="ShiftLeft">⇧</button>
-                    <button id="KeyZ"><div>z</div><div>я</div></button>
-                    <button id="KeyX"><div>x</div><div>ч</div></button>
-                    <button id="KeyC"><div>c</div><div>с</div></button>
-                    <button id="KeyV"><div>v</div><div>м</div></button>
-                    <button id="KeyB"><div>b</div><div>и</div></button>
-                    <button id="KeyN"><div>n</div><div>т</div></button>
-                    <button id="KeyM"><div>m</div><div>ь</div></button>
-                    <button id="Comma"><div>,</div><div>б</div></button>
-                    <button id="Period"><div>.</div><div>ю</div></button>
+                    <button id="KeyZ">
+                        <div>z</div>
+                        <div>я</div>
+                    </button>
+                    <button id="KeyX">
+                        <div>x</div>
+                        <div>ч</div>
+                    </button>
+                    <button id="KeyC">
+                        <div>c</div>
+                        <div>с</div>
+                    </button>
+                    <button id="KeyV">
+                        <div>v</div>
+                        <div>м</div>
+                    </button>
+                    <button id="KeyB">
+                        <div>b</div>
+                        <div>и</div>
+                    </button>
+                    <button id="KeyN">
+                        <div>n</div>
+                        <div>т</div>
+                    </button>
+                    <button id="KeyM">
+                        <div>m</div>
+                        <div>ь</div>
+                    </button>
+                    <button id="Comma">
+                        <div>,</div>
+                        <div>б</div>
+                    </button>
+                    <button id="Period">
+                        <div>.</div>
+                        <div>ю</div>
+                    </button>
                     <button id="-">-</button>
                     <button id="ShiftRight">⇧</button>
                 </div>
