--- a/kielet/index.html
+++ b/kielet/index.html
@@ -6,11 +6,23 @@
         <script type="text/javascript" src="data.js"> </script>
         <script type="text/javascript" src="index.js"> </script>
         <style>
+            body {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+
             #root {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 gap: 1em;
+
+                padding: 2%;
+                width: 75%;
+                border-radius: 3px;
+                box-shadow: 2px 2px 2px 0 gray;
+                background-color: lightgray;
             }
 
             #inputArea {
@@ -18,6 +30,10 @@
                 flex-direction: column;
                 align-items: center;
                 gap: 0.5em;
+            }
+
+            #inputArea > p:first-child {
+                margin-top: 0;
             }
 
             #keyboardArea {
@@ -37,6 +53,8 @@
                 height: 60px;
                 font-size: 20px;
                 margin: 0;
+
+                box-shadow: 1px 1px 1px 0 black;
             }
 
             /* Size and move the keys to match a real keyboard. */
@@ -122,8 +140,6 @@
                 bottom: -45%;
                 padding-left: 40%;
             }
-
-
         </style>
         <script type="text/javascript">
         </script>
